--- a/forms.html
+++ b/forms.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
-
+  <link rel="icon" type="image/x-icon" href="images\favicon.ico?">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
 
 
