--- a/klijenti.html
+++ b/klijenti.html
@@ -81,7 +81,7 @@
         <h1 class="klijenti-naslov">Naši Klijenti</h1>
     </div>
 
-    <div class="container-fluid">
+  <!--  <div class="container-fluid">
         <div class="row">
             <div class="col-sm-4 d-flex justify-content-center">
                 <div class="card" style="width: 75%;">
@@ -108,7 +108,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <footer id="footer">
         <p class="copyright-tekst">@ COPYRIGHT 2023 MONOMIC</p>
     </footer>
