--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#marketing">Vrste Marketinga</a>
+              <a class="nav-link" href="#marketing">Services we offer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#kontakt">Kontakt</a>
+              <a class="nav-link" href="#kontakt">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="klijenti.html">Klijenti</a>
+              <a class="nav-link" href="klijenti.html">Clients</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="onama.html">O nama</a>
+              <a class="nav-link" href="onama.html">About</a>
             </li>
             <li class="nav-item">
               <a class="btn btn-lg btn-outline-dark dugme rounded-pill" href="forms.html" type="button">Prijava</a>
@@ -70,8 +70,8 @@
 
       <div class="row">
         <div class="col-lg-6 col-md-12 heading">
-          <h1 class="promoviraj"> <span>PROMOVIRAJ!</span></h1>
-          <h1 class="big-heading ">SVOJ BIZNIS PREKO SOCIJALNIH MEDIJA</h1>
+          <h1 class="promoviraj"> <span>PROMOTE!>
+          <h1 class="big-heading ">YOUR BUSINESS THROUGH SOCIAL MEDIA</h1>
           <a type="button" href="forms.html" class="btn btn-dark btn-lg rounded-pill dugme2">Pridruži
             se</a>
         </div>
@@ -86,13 +86,13 @@
   <!-- Nacini Marketinga -->
   <section id="marketing">
     <div>
-      <h2 class="header-2">Vrste Marketinga</h2>
+      <h2 class="header-2">Services we offer</h2>
     </div>
     <hr class="horizontalline">
     <div class="container-fluid pozadina-logo">
       <img class="logo" src="images\Youtube.png" alt="Youtube logo">
-      <p class="tekst-logo">YouTube je platforma koja nudi različite formate video oglašavanja. Osim što je povoljnije od tradicionalnih vidova oglašavanja,
-         YouTube oglašavanje pruža mogućnost preciznog targetiranja uz transparentno izvještavanje o realiziranim kampanjama.
+      <p class="tekst-logo">YouTube is a platform that offers different video advertising formats. Besides being cheaper than traditional forms of advertising,
+         YouTube advertising provides the possibility of precise targeting with transparent reporting on realized campaigns.
       </p>
     </div>
     <hr class="horizontalline">
@@ -106,8 +106,8 @@
     <hr class="horizontalline">
     <div class="container-fluid pozadina-logo">
       <img class="logo" src="images\web development.png" alt="Web Development logo">
-      <p class="tekst-logo">Web stranica je prezentacija vašeg poslovanja koju mogu da vide milioni ljudi gdje god da se nalaze. Optimizirana i responzivna web stranica je 
-        prvi korak ka dolasku do vaše ciljne skupine, ostvarivanju vaših prodajnih ciljeva i postizanju kontinuiranog rasta prodaje, a samim time i poslovanja.
+      <p class="tekst-logo">A website is a presentation of your business that can be seen by millions of people wherever they are. It is an optimized and responsive website
+        the first step towards reaching your target group, achieving your sales goals and achieving continuous sales growth, and therefore business growth.
       </p>
     </div>
     <hr class="horizontalline">
