--- a/forms.html
+++ b/forms.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="images\favicon.ico?">
   <link rel="stylesheet" href="fonts/icomoon/style.css">
+  <link href="form\css\structure.css" rel="stylesheet">
+  <link href="form\css\form.css" rel="stylesheet">
 
 
   <!-- Bootstrap CSS -->
@@ -82,46 +84,119 @@
               <p></p>
 
               <p><img src="images\forma2.png" alt="Image" class="img-fluid"></p>
-
-
             </div>
             <div class="col-md-6">
+              <div class="ltr"
+                style="border: 0; box-shadow: rgba(0,0,0,0.0) 0px 0px 0; -webkit-box-shadow: 0;">
+                <form class="mb-5" id="form1" name="form1" accept-charset="UTF-8" autocomplete="off"
+                  enctype="multipart/form-data" method="post" novalidate
+                  action="https://monomic.wufoo.com/forms/zhk0q7601x6916/#public">
+                  <ul>
+                    <li id="foli1" class="notranslate">
+                      <label class="desc" id="title1">
+                        Name
+                        <span id="req_1" class="req">*</span>
+                      </label>
+                      <span>
+                        <div class="row">
+                          <div class="col-md-6 col-sm-6 form-group">
+                            <input id="Field1" name="Field1" type="text" class="form-control round field text fn" value=""
+                              style="background: #f3f3f3; border: 0; padding-left: 6px;" size="30" tabindex="0" placeholder="First name" required />
+                          </div>
+                          <div class="col-md-6 col-sm-6 form-group">
+                            <input id="Field2" name="Field2" type="text" class="form-control round field text ln" value=""
+                            style="background: #f3f3f3; border: 0; padding-left: 6px;"size="30" tabindex="0"
+                            onkeyup="handleInput(this);" onchange="handleInput(this);" placeholder="Last name" required="">
+                          </div>
+                        </div>
+                      </span>
+                    </li>
+                    <li id="foli3" class="notranslate      ">
+                      <label class="desc" id="title3" for="Field3">
+                        Email
+                        <span id="req_3" class="req">*</span>
+                      </label>
+                      <div>
+                        <div class="row">
+                          <div class="col-md-12 form-group">
+                        <input id="Field3" name="Field3" type="email" spellcheck="false" class="form-control round field text large"
+                          style="background: #f3f3f3; border: 0; padding-left: 6px;" value="" maxlength="255" tabindex="0" placeholder=""
+                          required />
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                    <li id="foli4" data-wufoo-field data-field-type="text" class="notranslate      ">
+                      <label class="desc" id="title4" for="Field4">
+                        Company
+                      </label>
+                      <div class="row">
+                        <div class="col-md-12 form-group">
+                        <input id="Field4" name="Field4" type="text" class="form-control round field text large"
+                          style="background: #f3f3f3; border: 0; padding-left: 6px;" value="" maxLength="255" tabindex="0" onkeyup=""
+                          placeholder="" />
+                        </div>
+                      </div>
+                    </li>
+                    <li id="foli5" class="     ">
+                      <fieldset>
+                        <![if !IE | (gte IE 8)]>
+                        <legend id="title5" class="desc notranslate">
+                          Would you like to receive our monthly newsletter?
+                          <span id="req_5" class="req">*</span>
+                        </legend>
+                        <![endif]>
+                        <!--[if lt IE 8]>
+                          <label id="title5" class="desc">
+                          Would you like to receive our monthly newsletter?
+                          <span id="req_5" class="req">*</span>
+                          </label>
+                          <![endif]-->
+                        <div>
+                          <input id="radioDefault_5" name="Field5" type="hidden" value="" />
+                          <span>
+                            <input id="Field5_0" name="Field5" type="radio" class="field radio" value="Yes" tabindex="0"
+                              onchange="" checked="checked" required />
+                            <label class="choice" for="Field5_0">
+                              <span class="choice__text notranslate">Yes</span>
+                              <span class="choice__qty">
+                              </span>
+                            </label>
+                          </span>
+                          <span>
+                            <input id="Field5_1" name="Field5" type="radio" class="field radio" value="No" tabindex="0"
+                              onchange="" required />
+                            <label class="choice" for="Field5_1">
+                              <span class="choice__text notranslate">No</span>
+                              <span class="choice__qty">
+                              </span>
+                            </label>
+                          </span>
+                        </div>
+                      </fieldset>
+                    </li>
+                    <li id="foli6" class="notranslate"><label class="desc" id="title6" for="Field6">
+                        Please tell us here if you have any other questions, and we'll be in touch shortly.
+                      </label>
+                      <textarea id="Field6" name="Field6" class="field textare medium"
+                        style="background: #f3f3f3; border: 0;" spellcheck="true" rows="10" cols="50" tabindex="0"
+                        onkeyup="validateRange(6, 'character');" placeholder=""></textarea>
+                    </li>
 
-              <form class="mb-5" method="post" id="contactForm" name="contactForm">
-                <div class="row">
-                  <div class="col-md-12 form-group">
-                    <input type="text" class="form-control" name="name" id="name" placeholder="Your name">
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-12 form-group">
-                    <input type="text" class="form-control" name="email" id="email" placeholder="Email">
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-12 form-group">
-                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-12 form-group">
-                    <textarea class="form-control" name="message" id="message" cols="30" rows="7"
-                      placeholder="Write your message"></textarea>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-12">
-                    <input type="submit" value="Send Message" class="btn btn-primary rounded-0 py-2 px-4">
-                    <span class="submitting"></span>
-                  </div>
-                </div>
-              </form>
+                    <li class="buttons ">
+                      <div>
 
-              <div id="form-message-warning mt-4"></div>
-              <div id="form-message-success">
-                Vaša poruka je poslana, hvala!
+                        <input id="saveForm" name="saveForm" class="btTxt submit" type="submit" value="Submit" />
+                    </li>
+                    <li class="hide">
+                      <label for="comment">Do Not Fill This Out</label>
+                      <textarea name="comment" id="comment" rows="1" cols="1"></textarea>
+                      <input type="hidden" id="idstamp" name="idstamp" value="[WUFOO VALUE IS HERE]" />
+                    </li>
+                  </ul>
+                </form>
               </div>
-            </div>
+            </div> 
           </div>
         </div>
       </div>
@@ -133,13 +208,14 @@
   </footer>
 
 
-
+</body>
   <script src="form\js\jquery-3.3.1.min.js"></script>
   <script src="form\js\popper.min.js"></script>
   <script src="form\js\bootstrap.min.js"></script>
   <script src="form\js\jquery.validate.min.js"></script>
   <script src="form\js\main.js"></script>
+  <script src="scripts/wufoo.js"></script>
 
-</body>
+
 
 </html>
